Seccion 3 - Eureka Server - Video 26 - Configurando timeout en Hystrix y Ribbon

--- a/servicio-items/src/main/resources/application.properties
+++ b/servicio-items/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.port=8002
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+#ribbon.connectTimeout=3000
+#ribbon.readTimeout=10000
