--- a/zuul-server/src/main/resources/application.properties
+++ b/zuul-server/src/main/resources/application.properties
@@ -5,6 +5,11 @@ server.port=8090
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+ribbon.connectTimeout=3000
+ribbon.readTimeout=10000
+
 zuul.routes.servicio-productos.service-id=servicio-productos
 zuul.routes.servicio-productos.path=/api/productos/**
 
